--- a/.github/workflows/build-on-default-branch-commit.yml
+++ b/.github/workflows/build-on-default-branch-commit.yml
@@ -23,6 +23,7 @@ jobs:
       uses: rumblefrog/setup-sp@master
       with:
         version: "1.10.x"
+        no-spcomp-proxy: true
 
     - name: Setup Ninja Build
       uses: ashutoshvarma/setup-ninja@master
